Premier commit de teste : -> add sql create scipt -> test index.html Bootstrap 3

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,9 +3,13 @@
 <html ng-app="geektic">
     <head>
         <title>Geektic</title>
+        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </head>
     <body ng-controller="HelloCtrl">
         <h1>{{ helloMessage.message }}</h1>
+
+		<button type="button" class="btn btn-danger" >TEST</button>
+
 
         <script src="/js/angular.js"></script>
         <script src="/js/angular-route.js"></script>
