--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,9 +6,34 @@
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     </head>
     <body ng-controller="HelloCtrl">
-        <h1>{{ helloMessage.message }}</h1>
 
-		<button type="button" class="btn btn-danger" >TEST</button>
+	<div class="container">	 
+		<nav role="navigation" class="navbar ">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#home">Home</a>
+			</div>
+			<div id="navbarCollapse" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li><a href="#all">Tous les geeks</a></li>
+					<li><a href="#search">Recherche</a></li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">ô_Ô</a></li>
+				</ul>
+			</div>
+		</nav>
+		<h1>MeatGeek</h1>
+		<div class="container">
+			<div class="row" ng-view>
+			</div>
+		</div>
+	</div>	
 
 
         <script src="/js/angular.js"></script>
