--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>Geektic</title>
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  		<link href="./css/base.css" rel="stylesheet" type="text/css">
     </head>
     <body ng-controller="HelloCtrl">
 
