--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
     <body ng-controller="HelloCtrl">
 
 	<div class="container">	 
-		<nav role="navigation" class="navbar ">
+		<nav role="navigation" class="navbar navbar-default ">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbarCollapse">
 					<span class="sr-only">Toggle navigation</span>
@@ -29,7 +29,7 @@
 				</ul>
 			</div>
 		</nav>
-		<h1>MeatGeek</h1>
+		<h1 class="text-center" >MeatGeek</h1>
 		<div class="container">
 			<div class="row" ng-view>
 			</div>
